--- a/style.css
+++ b/style.css
@@ -20,3 +20,20 @@ body {
 	background-color: white;
 	color: #333;
 }
+
+.button {
+	padding: 10px;
+	border: 0;
+	border-radius: 5px;
+	background-color: #13529e;
+	color: white;
+	text-transform: uppercase;
+}
+
+.button:hover {
+	background-color: #083872;
+}
+
+.hidden {
+	visibility: hidden;
+}
